# ComfyUI-Flux-Prompt-Saver

./: README.md  nodes.py  pyproject.toml
workflows/: FluxMetadataWorkflow.json
