[project]
name = "comfyui-flux-prompt-saver"
description = "The Flux Prompt Saver is set of simple nodes for saving images generated with Flux with A1111-style metadata."
version = "2.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/markuryy/ComfyUI-Flux-Prompt-Saver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "markury"
DisplayName = "ComfyUI-Flux-Prompt-Saver"
Icon = ""
